--- a/bibliography/reference.bib
+++ b/bibliography/reference.bib
@@ -1,3 +1,41 @@
+@article{tkacz2015role,
+  title={Role of root microbiota in plant productivity},
+  author={Tkacz, Andrzej and Poole, Philip},
+  journal={Journal of experimental botany},
+  volume={66},
+  number={8},
+  pages={2167--2175},
+  year={2015},
+  publisher={Oxford University Press UK}
+}
+@article{avis2008multifaceted,
+  title={Multifaceted beneficial effects of rhizosphere microorganisms on plant health and productivity},
+  author={Avis, Tyler J and Gravel, Valerie and Antoun, Hani and Tweddell, Russell J},
+  journal={Soil biology and biochemistry},
+  volume={40},
+  number={7},
+  pages={1733--1740},
+  year={2008},
+  publisher={Elsevier}
+}
+@incollection{antoun1998potential,
+  title={Potential of Rhizobium and Bradyrhizobium species as plant growth promoting rhizobacteria on non-legumes: effect on radishes (Raphanus sativus L.)},
+  author={Antoun, Hani and Beauchamp, Chantal J and Goussard, Nadia and Chabot, Rock and Lalande, Roger},
+  booktitle={Molecular microbial ecology of the soil},
+  pages={57--67},
+  year={1998},
+  publisher={Springer}
+}
+@article{pregitzer2002fine,
+  title={Fine root architecture of nine North American trees},
+  author={Pregitzer, Kurt S and DeForest, Jared L and Burton, Andrew J and Allen, Michael F and Ruess, Roger W and Hendrick, Ronald L},
+  journal={Ecological Monographs},
+  volume={72},
+  number={2},
+  pages={293--309},
+  year={2002},
+  publisher={Wiley Online Library}
+}
 @article{bruulsema2012fertilizing,
   title={Fertilizing crops to improve human health: a scientific review},
   author={Bruulsema, Tom W and Heffer, Patrick and Welch, Ross and Cakmak, Ismail and Moran, Kevin and others},
