--- a/manuscript_Rmd/Acadian_seaplants_v5.Rmd
+++ b/manuscript_Rmd/Acadian_seaplants_v5.Rmd
@@ -83,9 +83,9 @@ First, sequences were trimmed following strict quality thresholds (removing prim
 Each plant species (tomato and pepper) were analysed seperately. We tested for the amendment effect (tomato: hen manure + ANE, pepper: ANE) on six plant productivity measures (fruit number, average fruit weight, shoots fresh weight, roots fresh weight, shoots dry weight, roots dry weight). We used Linear Mixed effect Models (LMM) in the R package `NLME` [@pinheiro2017nlme], which are more appropriate than an Analysis of Variance (ANOVA) given the current block design (blocks and replicates were treated as random variables). All six plant productivity measures were either square root or log transformed in order to help satisfy the assumption of normality of the residuals in the LMM statistical framework. For the variables *fruit number* and *average fruit weight*, we also verified statistical significance using a permutation-based 2-way ANOVA [@anderson1999empirical] given that the residuals of the LMM were not normally distributed. Results were similar according to the 2-way ANOVA.      
 &nbsp;  
 *Statistical analyses - microbial and fungal diversity*  
-For each fungal-root, fungal-soil, bacterial-root and bacterial-soil datasets seperately, we removed samples that showed poor sequencing output and contained few ASV. In addition, for bacterial root and soil datasets, we removed ASV that were taxonomically assigned to *mitochondria* or *chloroplast* given that these were likely sequences from the plants themselves. To remove low quality samples, we first summed the abundance of all ASV for each sample ($\sum_{i=1}^n ASV$) and eliminated samples that had fewer that the mean sum minus four standard deviations ($\overline{\sum_{i=1}^n ASV} - 4\sigma$). In addition, we removed ASV from our dataset that were present in fewer than 5% of the samples (less than ten individuals in the soil samples or less than five in the root samples). This was done to remove very rare ASV unique to a block or replicate, but not found in the majority of samples.  
+For each fungal-root, fungal-soil, bacterial-root and bacterial-soil datasets, we removed samples that showed poor sequencing output and contained few ASV. In addition, for bacterial root and soil datasets, we removed ASV that were taxonomically assigned to *mitochondria* or *chloroplast* given that these were likely sequences from the plants themselves. To remove low quality samples, we first summed the abundance of all ASV for each sample ($\sum_{i=1}^n ASV$) and eliminated samples that had fewer that a summed abundance of 1,000. In addition, we removed ASV from our dataset that were present in fewer than 5% of the samples (less than ten individuals in the soil samples or less than five in the root samples). This was done to remove very rare ASV unique to a block or replicate, but not found in the majority of samples.  
 &nbsp;    
-We then conducted community-based analyses looking at the amendment effect on ASV abundance in the tomato and pepper experiments seperately. To reduce the complexity of the datasets, relative abundance of all taxa was calculated per family using the `R` package `DPLYR` [@wickham2015dplyr]. Barplots were drawn using `GGPLOT2` [@wickham2016ggplot2] to visualize communities. ASV alpha ($a$)-diversity was calculated based on all ASV (excluding rare ASV, see paragraph above) for each sample using the inverse Simpson diversity index in `VEGAN` [@oksanen2013package]. The effect of the amendment and planting for soil communities were assessed using a Linear Mixed effect Model (LMM) model in the R package `NLME` [@pinheiro2017nlme], given the unbalanced, replicated block design. Alpha diversity was *log* transformed in order to help satisfy the assumption of normality of the residuals in the LMM statistical framework.   
+We then conducted community-based analyses looking at the amendment effect on ASV abundance in the tomato and pepper experiments seperately. To visualize communities and reduce the complexity of the datasets, relative abundance of all taxa was calculated per family using the `R` package `DPLYR` [@wickham2015dplyr] and barplots were drawn using `GGPLOT2` [@wickham2016ggplot2]. ASV alpha ($a$)-diversity was calculated based on all ASV (excluding rare ASV, see paragraph above) for each sample using the inverse Simpson diversity index in `VEGAN` [@oksanen2013package]. The effect of the amendment and planting for soil communities were assessed using a Linear Mixed effect Model (LMM) model in the R package `NLME` [@pinheiro2017nlme], given the unbalanced, replicated block design. Alpha diversity was *log* transformed in order to help satisfy the assumption of normality of the residuals in the LMM statistical framework.   
 &nbsp;    
 Using the community matrix data of ASV abundance, we performed PERmutational Multivariate ANalysis Of VAriance tests [PERMANOVA; @anderson2001new] to identify relationships between the communities according to the experimental design. Data were analyzed separately for fungal-root, fungal-soil, bacterial-root and bacterial-soil in tomatoes and peppers. The ASV abundance matrix was Hellinger-transformed and significance was assessed using 10,000 permutations in `vegan` [@oksanen2013package]. Blocks and replicates were factored as strata in the model.  
 &nbsp;    
@@ -101,19 +101,19 @@ Finally, we attempted to identify candidate ASV positively associated with produ
 The effects of the amendment treatment on tomato (hen manure + ANE) and pepper (ANE) were determined by measuring six agronomic parameters (fruit number, average fruit weight, shoots fresh weight, shoots dry weight, roots fresh weight, roots dry weight). We observed a significant increase of almost all these agronomic parameters (LMM, *p*-value<0.005, Figure 1) for amended plants except for the average fruit fresh weight for tomato that did not differ between amended and control plants (LMM, $F_{(1,23)}$ = 1.81, *p*-value=0.19, Figure 1 and Figure S1). The amendment effect was stronger in the tomato plants (fold changes between amemded and control plants shown in Figure 1), likely due to the fact that these plants were fertilized with both hen manure and ANE.      
 &nbsp;  
 *Amplicon Sequencing*  
-A total of 2.7 million paired-end raw reads were obtained for all samples combined (976,000 for fungi-soil, 920,000 for fungi-root, 309,000 for bacteria-soil and 535,000 for bacteria-root, Table S4). On average, 47,664 paired-end reads were obtained per sample. After quality filters were applied, including removing chimeras, and paired-end reads were merged, an average of 19,690 sequences remained per sample. From 192 soil samples for fungi and bacteria, and 96 root samples for fungi and bacteria sequenced, seven fungi-soil samples, 15 fungi-root samples and one bacteria-root samples were removed because they had to few reads based on our strict quality thresholds.  
+A total of 2.7 million paired-end raw reads were obtained for all samples combined (976,000 for fungi-soil, 920,000 for fungi-root, 309,000 for bacteria-soil and 535,000 for bacteria-root, Table S4). On average, 47,664 paired-end reads were obtained per sample. After quality filters were applied, including removing chimeras, and paired-end reads were merged, an average of 19,690 sequences remained per sample. From 192 soil samples for fungi and bacteria, and 96 root samples for fungi and bacteria, three fungi-soil samples, 15 fungi-root samples and one bacteria-root samples were removed because they had to few reads based on our strict quality thresholds.  
 &nbsp;  
-The `DADA2` pipeline inferred, on average, 170 Amplicon Sequence Variants (ASV) per sample (average of 176 fungal-soil ASV, 37 fungal-root ASV, 269 bacterial-soil ASV and 92 bacterial-root ASV). Many of these were unique to one or a few samples (total number of 6,112 fungal-soil, 845 fungal-root, 9,352 bacterial-soil and 2,023 bacterial-roots ASV). After quality filtering, we retained 413, 106, 811 and 325 ASV respectively for fungal-soil, fungal-root, bacterial-soil and bacterial-roots. These retained ASV comprised 94%, 95%, 89% and 98% of all reads in the fungal-soil, fungal-root, bacterial-soil and bacterial-root samples, respectively.  
+The `DADA2` pipeline inferred 6,112 fungal-soil, 845 fungal-root, 9,352 bacterial-soil and 2,023 bacterial-roots ASV (Table S4). In bacteria-soil, we further removed a total of 79 ASV whose taxonomy corresponded to *mitochondria* or *chloroplast* and represented 0.1% of all sequencing reads. In bacteria-root samples, we removed a total of 284 ASV that corresponded to *mitochondria* or *chloroplast* and represented 89% of all sequencing reads. After filtering out rare ASV, we retained 413, 106, 807 and 262 ASV respectively for fungal-soil, fungal-root, bacterial-soil and bacterial-roots. These retained ASV comprised 94%, 95%, 89% and 11% of all filtered-merged sequences assigned to ASV by the `DADA2` pipeline in the fungal-soil, fungal-root, bacterial-soil and bacterial-root samples, respectively.  
 &nbsp;  
 *Fungal and bacterial diversity in root and soil biotopes*  
-The microbial community structures of soil and root samples were analyzed and the relative abundance of their taxa was determined at the family level (Figures 2 & 3). Fungal communities were dominated by Nectriaceae, both in the root and soil samples, while the bacterial family Bacilaceae dominated to a lesser extent the soil samples. Bacterial root communities were largely dominated by Cyanobacteria (identified as *chloroplast* in the silva database according to the RDP Bayesian Classifier).  
+The microbial community structures of soil and root samples were analyzed and the relative abundance of their taxa was determined at the family level (Figures 2 & 3). Fungal communities were dominated by Nectriaceae, both in the root and soil samples, while the bacterial family Bacilaceae dominated to a lesser extent the soil samples. Bacterial root communities harbored a number of different families: Streptomycetaceae, Sphingomonadaceae, Rhizobiaceae and Pseudomonadaceae among others.   
 &nbsp;  
 *Local ($a$-diversity)*  
-The $a$-diversity was calculated separately for each sample, under each experimental condition (fungi-soil, fungi-root, bacteria-soil and bacteria-root for both tomato and pepper, Figure 4). Linear mixed effects models showed that the $a$-diversity (Inverse Simpson Index) was significantly higher in the soil biotope that in the roots for both fungi (mean $a$-diversity soil-fungi = 2.88 vs mean $a$-diversity root-fungi = 27.3, $F_{(1,239)}$=899.5, *p*-value<0.0001) and bacteria (mean $a$-diversity soil-fungi = 1.3 vs mean $a$-diversity root-fungi = 69.3, $F_{(1,256)}$=2048.4, *p*-value<0.0001).   
+The $a$-diversity was calculated separately for each sample, under each experimental condition (fungi-soil, fungi-root, bacteria-soil and bacteria-root for both tomato and pepper, Figure 4). Linear mixed effects models showed that the $a$-diversity (Inverse Simpson Index) was significantly higher in the soil biotope that in the roots for both fungi (mean $a$-diversity soil-fungi = 2.88 vs mean $a$-diversity root-fungi = 27.3, $F_{(1,239)}$=899.5, *p*-value<0.0001) and bacteria (mean $a$-diversity soil-bacteria = 4.7 vs mean $a$-diversity root-bacteria = 69.2, $F_{(1,223)}$=1198.1, *p*-value<0.0001).   
 &nbsp;  
 In soil samples, fungal $a$-diversity was not significantly different in amended vs control plants for neither tomato ($F_{(1,66)}$=1.6, *p*-value=0.21) nor pepper ($F_{(1,69)}$=1.2, *p*-value=0.05). In root samples, fungal $a$-diversity was significantly different in amended versus control plants for tomato ($F_{(1,21)}$=10.2, *p*-value=0.004), but not pepper ($F_{(1,56)}$=3.1, *p*-value=0.10).  
 &nbsp;  
-In soil samples, bacterial $a$-diversity was significantly different in amended vs control plants for pepper ($F_{(1,66)}$=31.2, *p*-value<0.0001), but not tomato ($F_{(1,69)}$=1.9, *p*-value=0.17). In root samples, bacterial $a$-diversity was significantly different in amended versus control plants for tomato ($F_{(1,23)}$=19.5, *p*-value<0.0001), but not pepper ($F_{(1,22)}$=0.01, *p*-value=0.92).   
+In soil samples, bacterial $a$-diversity was significantly different in amended vs control plants for pepper ($F_{(1,69)}$=31.5, *p*-value<0.0001), but not tomato ($F_{(1,69)}$=1.9, *p*-value=0.17). In root samples, bacterial $a$-diversity was significantly different in amended versus control plants for tomato ($F_{(1,22)}$=39.7, *p*-value<0.0001), but not pepper ($F_{(1,4)}$=0.17, *p*-value=0.70).   
 &nbsp;  
 *Differences in species composition among sites*  
 Using a PERMANOVA, we identified that the ANE amendment treatment had a highly significant effect on both fungal and bacterial community structures (Table 1). This effect was stronger in the root (9-30% of variance explained in the models) than in the soil (3-6% of variance explained in the models).  Planting also had a significant effect on fungal and bacterial community structures in both tomato and pepper plants (12-24% of variance explained in the models).  
@@ -122,9 +122,9 @@ Redundancy analyses (RDAs, Figures 5 for fungi and Figure 6 for bacteria) illust
 &nbsp;      
 Next, we identified, for each RDA, the ten ASV most closely related to the three constraints of the model (roots fresh weight, shoots fresh weight and fruit number). These ASV were considered as putative candidate taxa most positively impacted by increases in productivity due to the ANE amendment treatment. We further analyzed the corresponding sequences for these eighty candidate ASV (ten candidates \* eight ordinations) in two separate alignments (one for fungi and one for bacterial ASV) and their accompanying phylogenetic trees.    
 &nbsp;    
-In fungi, we identified a number of different ASVs positively associated with productivity (Figure S2). Notably, five different ASVs taxonomically assigned to the family Microascacea (phylum Ascomycota) in all conditions except the pepper-root were positively associated to productivity. In addition, two ASV assigned to *Mortierella* spp (soil saprotrophs in the phylum Mucoromycota), and a cluster of six different fungal closely related ASV in tomato-soil (ASV67 & ASV132), tomato-root (ASV10, ASV1017, ASV1018, ASV1019) and pepper-soil (ASV67) were positively associated to productivity in both tomato and pepper roots. Given that no taxonomy was assigned to these sequences through the `DADA2` RDP bootstrap approach, we used a BLASTn [@altschul1997gapped] approach to identify the most closely related sequences against NCBI nr. The most closely related fungal reference sequences were from an *uncultured fungus clone* (BLASTn, 86% identity,  e-value=9e-58, sequence ID: EU517002.1). Similarly, two unknown ASV (ASV61 & ASV81) also matched an *uncultured fungus clone* (BLASTn, 94% identity,  e-value=4e-165, sequence ID: DQ900965.1). Finally, another cluster of ASVs in the pepper-root was assigned to *Olpidium brassicae*, a fungal parasite belonging to flagellate fungi [@lay2018taxonomy].   
+In fungi, we identified a number of different ASVs positively associated with productivity (Figure S2). Notably, five different ASVs taxonomically assigned to the family Microascaceae (phylum Ascomycota) in all conditions except the pepper-root were positively associated to productivity. In addition, two ASV assigned to *Mortierella* spp (soil saprotrophs in the phylum Mucoromycota), and a cluster of six different fungal closely related ASV in tomato-soil (ASV67 & ASV132), tomato-root (ASV10, ASV1017, ASV1018, ASV1019) and pepper-soil (ASV67) were positively associated to productivity in both tomato and pepper roots. Given that no taxonomy was assigned to these sequences through the `DADA2` RDP bootstrap approach, we used a BLASTn [@altschul1997gapped] approach to identify the most closely related sequences against NCBI nr. The most closely related fungal reference sequences were from an *uncultured fungus clone* (BLASTn, 86% identity,  e-value=9e-58, sequence ID: EU517002.1). Similarly, two unknown ASV (ASV61 & ASV81) also matched an *uncultured fungus clone* (BLASTn, 94% identity,  e-value=4e-165, sequence ID: DQ900965.1). Finally, another cluster of ASVs in the pepper-root was assigned to *Olpidium brassicae*, a fungal parasite belonging to flagellate fungi [@lay2018taxonomy].   
 &nbsp;    
-In bacteria-roots, we identified a large diversity of ASV positively correlated (increased abundance of these ASV) with the four measures of productivity (Figure S3). Some of them are well known soil bacteria such as *Rhizobium*, or *Sphingomonas* and were identified in both biotopes and species. 
+In bacteria-roots, we identified a large diversity of ASV positively correlated (increased abundance of these ASV) with productivity (Figure S3), Among others we identified *Rhizobium*, *Sphingomonas*, *Sphingobium*, *Bradyrhizobium* in both the soil and root biotopes and tomato and pepper species. 
 \newpage  
   
 # DISCUSSION
@@ -134,17 +134,17 @@ In the tomato experimental set up, the effect of the amendment treatment was esp
 &nbsp;    
 One of primary goal of the study was to document how bacterial and fungal communities responded to the addition of ANE. We used Illumina MiSeq amplicon sequencing targeting DNA regions specific to fungi (ITS) and bacteria (16S). Then, we identified bacterial and fungal taxa present in the samples using a relatively novel bioinformatics approach developed by -@callahan2016dada2. The approach, based on the widely used programming language `R` [@team2018r], identifies unique, non-clustered sequences (ASV) that are then comparable among studies. In addition, the current analytical pipeline uses a bayesian classifier for taxonomy rather than the widely used BLAST approach, thus providing more conservative, but more accurate taxonomic identifications [@wang2007naive].  
 &nbsp;    
-In the current experimental set up, most ASV identified were rare and unique to one or a few sample. In fact, approximately 90% of all ASV were discarded given that they were found in singletons or present in very few samples and were thus not representative of a particular experimental treatment. These ‘rare’ ASV comprised a small minority of all sequencing reads (approximately 5% of all sequences), a pattern reminiscent of the early species abundance models showing that in most ecological communities, few species are exceptionally abundant whereas most are rare [@fisher1943relation].  
+In the current experimental set up, most ASV identified were rare and unique to one or a few sample. In fact, approximately 90% of all ASV were discarded given that they were found in singletons or present in very few samples and were thus not representative of a particular experimental treatment. These ‘rare’ ASV comprised a small minority of all sequencing reads (approximately 5% of all sequences), a pattern reminiscent of the early species abundance models showing that in most ecological communities, few species are exceptionally abundant whereas most are rare [@fisher1943relation]. In addition, a large fraction of the sequencing reads in the root bacterial communities likely originated from the plants themselves (identified as *chloroplast* or *mitochondria*). This may be partly explained by the fact that most of root biomass collected was from large roots (Fig. S1B), rather than fine root hair which are most difficult to sample, but where surface area is larger and most biological activity likely takes place [@pregitzer2002fine;or a better citation]. As such, it is likely that the total biomass extracted in the current study consisted proportionally of more root cell rather than biologically acvtive bacterial biomass.   
 &nbsp;  
-Nectriaceae, a family of fungi in the order Hypocreales and often encountered as saprotrophs on decaying organic matter comprised most of the diversity both in the soil and plant roots (between 25-70% of the total number of sequencing reads, Figure 2). With respect to bacterial communities of the soil, theses were much more diverse and comprised many different families (Figure 3). Surprisingly, most sequencing reads in the bacterial communities of roots likely originate from the plants themselves (identified as chloroplastic or mitochondrial in origin in Figure 3), despite the fact that the DNA primers pair used should have primarily targeted the bacterial V3-V4 region of the 16S ribosomal gene. The ANE amendment treatment had a significant effect on both fungal and bacterial $a$-diversity (total richness of ASV) in the root biotope, except for bacteria in pepper plants. In the soil biotope, it only had a significant effect for bacteria in the tomato plants (Figure 4).  
+Nectriaceae, a family of fungi in the order Hypocreales and often encountered as saprotrophs on decaying organic matter comprised most of the diversity both in the soil and plant roots (between 25-70% of the total number of sequencing reads, Figure 2). With respect to bacterial communities of the soil, theses were much more diverse and comprised many different families (Figure 3). The ANE amendment treatment had a significant effect on both fungal and bacterial $a$-diversity (total richness of ASV) in the root biotope, except for bacteria in pepper plants. In the soil biotope, it only had a significant effect for bacteria in the tomato plants (Figure 4).  
 &nbsp;   
-The ANE amendment treatment significantly influenced fungal and bacterial community composition ($b$-diversity) among root and soil biotopes. This effect was relatively small (3-30% of variance explained in the models, Table 1) but significant, implying that the addition of ANE (pepper) or ANE and hen manure (tomato) is responsible for shaping microbial communities. In addition, a significant proportion of the variance in soil communities (12-24%) was explained by the planting effect, showing how plants can alter their microbiome. We also tested the effect of plant species identity on community structure on a combined dataset comprised of both the tomato and pepper plants. In the root biotope, we find that this effect is relatively strong (24 and 52% of variance explained in the models for fungal and bacterial communities, respectively, Table S5) and in line with numerous studies reporting how plants select their microbial communities [@chaparro2014rhizosphere;@reinhold2015roots]. Nevertheless, we recognize that the current experimental setup precludes any strong conclusion regarding the plant species' effect of community structure, as it does not allow to explicitly distentangle the species effect from the "addition of hen manure" effect.   
+The ANE amendment treatment significantly influenced fungal and bacterial community composition ($b$-diversity) among root and soil biotopes. This effect was relatively small (3-33% of variance explained in the models, Table 1) but significant, implying that the addition of ANE (pepper) or ANE and hen manure (tomato) is responsible for shaping microbial communities. In addition, a significant proportion of the variance in soil communities (12-24%) was explained by the planting effect, showing how plants can alter their microbiome. Finally, we also tested the effect of plant species identity on community structure on a combined dataset comprised of both the tomato and pepper plants. In the root biotope, we find that this effect (26 and 20% of variance explained in the models for fungal and bacterial communities, respectively, Table S5) is in line with numerous studies reporting how plants select their microbial communities [@chaparro2014rhizosphere;@reinhold2015roots]. Nevertheless, we recognize that the current experimental setup precludes any strong conclusion regarding the plant species' effect of community structure, as it does not allow to explicitly distentangle the species effect from the "addition of hen manure" effect.   
 &nbsp;   
 Finally, we also aimed to identify candidate taxa positively correlated with increased plant productivity in response to ANE application. In fungi, one cluster of ASV taxonomically assigned to *Mortierella* (soil saprotrophs in the phylum Mucoromycota) was positively correlated to productivity in both tomato and pepper roots. Interestingly, Li *et al.* [-@li2018mortierella] found that a closely related species (*M. elongata*) can defend against soil degradation, improve soil health, and stimulate production of plant growth hormones. In their study, Chung *et al.* [-@chung2007plant] showed how higher plant species richness and increases in productivity led to greater microbial biomass and greater number of saprophytic and arbuscular mycorrhizal fungi. Perhaps, this can be explained by the fact that microbial communities experienced greater substrate availability, potentially increasing their activity, and the activity of saprophytic fungi feeding on organic matter.  
 &nbsp;   
 Several other fungal ASV in tomato (soil) and pepper (root) were linked to increases in productivity. Surprisingly, a putative plant pathogenic fungus (*Olpidium brassicaceae*, Figure S2) was also positively associated with increased productivity. However, *O. brassicae* is likely a species complex and has been shown to constitute a large proportion of the plant roots or rhizosphere fungal community in many different systems, particularly in Brassicaceae crops [@lay2018taxonomy]. In addition, current databases usually confuse the *O. brassicae* with the virus-carrier *O. virulentus* [@lay2018taxonomy]. As such, this may explain its presence in the soil and association with plant productivity.  
-&nbsp;   
-In bacteria roots samples, a diverse number of ASV were positively impacted by the amendment treatment (Figure S3). The specific role of those taxa on crop productivity will need further investigations.    
+&nbsp;     
+In bacteria roots samples, a diverse number of ASV were positively impacted by the amendment treatment (Figure S3) and many of those are known to be present in the root endosphere [e.g. *Rhizobium*, *Sphingomonas*, *Sphingobium*, *Bradyrhizobium* spp, @tkacz2015role]. For example *Rhizobium*, and *Bradyrhizobium* spp. have been shown to promote plant growth, P solubilization, N fixation and overall productivity in both legume and non-legumes species such as radishes [@avis2008multifaceted;@antoun1998potential].  
 &nbsp;  
 It is now well established that seaweed extracts have a positive effect on agricultural plant productivity. Concurrently, DNA barcoding permits a more comprehensive understanding of the diversity and ecology of microbial organisms and how they interact. In fact, plants and microbes should likely be redefined as *holobionts*, an assemblage of different species that form an ecological unit [@margulis1991symbiosis]. In this study, we showed that the addition of ANE increased plant productivity. It also increased, by a small, but significant margin, the fungal and bacterial (only in the rhizosphere) biodiversity and changed the microbial community structure in the roots and in the rhizosphere of both tomato and pepper plants. Finally, we identified bacterial and fungal taxa, especially saprotroph, that were positivity associated with plant productivity. Further studies, for example using inoculum of the candidate microbial species linked to increases in productivity that we identified, may help to identify a causative link between liquid seaweed extracts, microbes and productivity.  
 &nbsp;    
