resubmission to MB

--- a/bibliography/reference.bib
+++ b/bibliography/reference.bib
@@ -673,3 +673,33 @@ url = {https://files.plutof.ut.ee/doi/C8/E4/C8E4A8E6A7C4C00EACE3499C51E550744A25
   year={1943},
   publisher={JSTOR}
 }
+@article{shen2019lime,
+  title={Lime and ammonium carbonate fumigation coupled with bio-organic fertilizer application steered banana rhizosphere to assemble a unique microbiome against Panama disease},
+  author={Shen, Zongzhuan and Wang, Beibei and Zhu, Jiaxin and Hu, Hangwei and Tao, Chengyuan and Ou, Yannan and Deng, Xuhui and Ling, Ning and Li, Rong and Shen, Qirong},
+  journal={Microbial biotechnology},
+  year={2019},
+  publisher={Wiley Online Library},
+  volume={12},
+  number={3},
+  pages={515--527}
+}
+@article{shen2015rhizosphere,
+  title={Rhizosphere microbial community manipulated by 2 years of consecutive biofertilizer application associated with banana Fusarium wilt disease suppression},
+  author={Shen, Zongzhuan and Ruan, Yunze and Chao, Xue and Zhang, Jian and Li, Rong and Shen, Qirong},
+  journal={Biology and Fertility of Soils},
+  volume={51},
+  number={5},
+  pages={553--562},
+  year={2015},
+  publisher={Springer}
+}
+@article{trivedi2017tiny,
+  title={Tiny Microbes, Big Yields: enhancing food crop production with biological solutions},
+  author={Trivedi, Pankaj and Schenk, Peer M and Wallenstein, Matthew D and Singh, Brajesh K},
+  journal={Microbial biotechnology},
+  volume={10},
+  number={5},
+  pages={999--1003},
+  year={2017},
+  publisher={Wiley Online Library}
+}
